Fixed some alignment issues

--- a/Simply-Blogging/css/style.css
+++ b/Simply-Blogging/css/style.css
@@ -7,11 +7,11 @@ div.addBlog{
     margin-right: auto;
     margin-top: 100px;
     width : 600px;
-    height : 500px;
+    height : 460px;
     border: 5px solid black;
     text-align: center;
     border-radius: 30px;
-    padding: 40px;
+    padding: 30px;
 }
 
 div.smallBlog{
